--- a/css/style2.css
+++ b/css/style2.css
@@ -113,7 +113,7 @@ footer{
     padding: 5px;
 }
 
-.FotosPropuesta{
+/* .FotosPropuesta{
     display: grid;
     position: center;
     justify-content: center;
@@ -127,11 +127,12 @@ footer{
 .p1{grid-area: imgp1;}
 .p2{grid-area: imgp2;}
 .p3{grid-area: imgp3;}
+*/
 
-.p1{padding: 10px; border: 1px solid black; border-radius: 20px;}
-.p2{padding: 10px; border: 1px solid black; border-radius: 20px;}
-.p3{padding: 10px; border: 1px solid black; border-radius: 20px;}  
-.p4{padding: 10px; border: 1px solid black; border-radius: 20px;}  
+.p1{padding: 10px; border: 1px solid black; border-radius: 20px; background-color: black;}
+.p2{padding: 10px; border: 1px solid black; border-radius: 20px; background-color: black;}
+.p3{padding: 10px; border: 1px solid black; border-radius: 20px; background-color: black;}  
+.p4{padding: 10px; border: 1px solid black; border-radius: 20px; background-color: black;}   
 
 /* Estilo del main de nosotros */
 
@@ -162,7 +163,7 @@ footer{
     grid-template-rows: auto; 
 }
 
-.formulario{grid-area: formulario; padding: 50px; background-color: rgb(70, 69, 70); margin: 20px; border: 1px solid black; border-radius: 20px; font-size: large;}
+.formulario{grid-area: formulario; padding: 50px; background-color: rgb(70, 69, 70); margin: 20px; border: 1px solid black; border-radius: 20px; font-size: large; color: white;}
 
 input:invalid {
     background-color: #ffdddd;
